k8s/oci/manifests/06-notifications-worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notifications-worker
  namespace: academic-registration
  labels:
    app.kubernetes.io/name: academic-registration
    app.kubernetes.io/component: notifications-worker
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: academic-registration
      app.kubernetes.io/component: notifications-worker
  template:
    metadata:
      labels:
        app.kubernetes.io/name: academic-registration
        app.kubernetes.io/component: notifications-worker
    spec:
      imagePullSecrets:
        - name: ocir-secret
      containers:
        - name: notifications-worker
          image: ocir.sa-bogota-1.oci.oraclecloud.com/ax8nej0w8huf/academic-registration/notifications:dev
          imagePullPolicy: Always
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              cpu: 250m
              memory: 256Mi
